added an extra project

--- a/home.html
+++ b/home.html
@@ -5,11 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<meta name="description" content="Hi. I like narwhals.">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="Font-Awesome-master/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="Font-Awesome-master/css/font-awesome.min.css">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css">
-
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+ 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 		<link rel="stylesheet" href="css/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 		<link rel="stylesheet" href="css/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
@@ -17,14 +18,14 @@
 		<link rel="stylesheet" href="css/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
 		<!-- end -->
 
-		<title> Nathaniel | Shiau | Lam</title>
+		<title>Nathaniel | Shiau | Lam</title>
 	</head>
 	<body>
-		<div id="top" class="jumbotron">
-			<div id="intro" class="container" >
-				<h1>Nice to meet you.</h1> 
+		<div id="top">
+			<div id="intro" class="container box">
+				<h1>Nathan Lam</h1> 
 				<hr style="width: 78%; background: #fff; margin: auto;">
-				<h3>I'm Nathan</h3>
+				<h3>Welcome to my portfolio.</h3>
 			</div>
 			<a href='#about' class="scroll_down smoothScroll">
 				<span class="glyphicon glyphicon-hand-down navglyphicon"></span>
@@ -48,15 +49,15 @@
 		</div>
 
 		<div class="background-white">
-			<div id="about" class="container">
+			<div id="about" class="container box">
 				<h2>About</h2>
 				<img src="https://s3.amazonaws.com/nathanlamimages/images/nathanlam.jpg">
 				<p class="lead">Student<>Developer</p>
 				<hr style="width:100%; border-color:#6C7A89; opacity: .6; margin-top: 20px;">
 				<div class="row">
 					<div class="col-md-4"> 
-						<h3>Hello</h3>
-						<p>I am a student and amateur developer at <span style="color:#F9690E;"><b>Princeton University</b></span> using computers to do cool things. I appreciate simple, clean design, and I like working on products that improve peoples' lives.</p>
+						<h3>Bio</h3>
+						<p>I am a computer science major at <span style="color:#F9690E;"><b>Princeton University</b></span> using computers to do cool things. I appreciate simple, clean design, and I'm currently a freelance web designer working with individuals and small businesses.</p>
 					</div>
 					<div class="col-md-4"> 
 						<h3>Skills</h3>
@@ -77,8 +78,8 @@
 			</div>
 		</div>
 		<div class="background-gray">
-			<div id="experiences" class="container">
-				<h2>What I've Done</h2>
+			<div id="experiences" class="container box">
+				<h2>Resume</h2>
 				<hr style="width:100%; border-color:#6C7A89; opacity: .6; margin-top: 20px;">
 				<h3 class="subtitle">Education</h3>
 				<br>
@@ -111,8 +112,8 @@
 						<p class="timespent">2013-Present</p>
 					</div>
 					<div class="col-md-8">
-						<p class="exp-info"><b>President</b></p>
-						<p class="exp-desc">There's been plenty of talk on campus for a group for social entrepreneurs. We're here to provide that. My responsibilities include managing the website, overseeing officers for our speaker series and TEDx events, and rebranding.</p>
+						<p class="exp-info"><b>Co-President</b></p>
+						<p class="exp-desc">We bring opportunities to campus that educate and prepare students for social impact careers. Two of the main programs we hold include TEDxPrincetonU and PSICON15, a two-day social impact conference and social venture competition in which we award $30,000 in seed funding. Recently, my main responsibilities have involved managing the web development team. We use Trello to set deadlines and delegate tasks, and we have weekly scrums to keep our development process on track.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -122,7 +123,7 @@
 					</div>
 					<div class="col-md-8">
 						<p class="exp-info"><b>Competitions Officer</b></p>
-						<p class="exp-desc">Last year, I had some fun organizing pitch-deck competitions where we gave out over $70K. I found local VCs and Entrepreneurs to serve as judges for the competitions and met some amazing people along the way.</p>
+						<p class="exp-desc">Last year, I helped organize a venture/social venture competitions where we awarded $60,000 in seed funding. I recruited over twenty venture capitalists and entrepreneurs to serve as judges for the competition and met some amazing people along the way.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -131,8 +132,8 @@
 						<p class="timespent">2010-Present</p>
 					</div>
 					<div class="col-md-8">
-						<p class="exp-info"><b>Gamma</b></p>
-						<p class="exp-desc">These past few years, most of my time was spent counseling peer-to-peer youth leadership programs with CASC. We hold camps and conferences for K-12 students. I've traveled around California and China working with this organization, and I plan to stay involved for years to come. Gamma basically means that I'm a counselor's counselor: I train the high school counselors that run the programs.</p>
+						<p class="exp-info"><b>Gamma (Leadership Coach)</b></p>
+						<p class="exp-desc">These past few years, most of my time was spent counseling peer-to-peer youth leadership programs with CASC. We hold camps and conferences for K-12 students. I've traveled around California and China working with this organization, and I plan to stay involved for years to come. Gamma basically means that I'm a counselor's counselor: I train high school counselors that run over fifty programs each year.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -151,14 +152,24 @@
 						<p class="timespent">2014</p>
 					</div>
 					<div class="col-md-8">
-						<p class="exp-info"><b>A.B.C.</b></p>
-						<p class="exp-desc">I spent my freshman summer at a study abroad Chinese program in Beijing. It was pretty difficult not being to speak Chinese at first, but I'm proud to say that I'm fairly fluent now. And I've gotten more in touch with my cultural roots.</p>
+						<p class="exp-info"><b>Student</b></p>
+						<p class="exp-desc">I spent my freshman summer at a study abroad Chinese program in Beijing. It was pretty difficult not being able to speak Chinese at first, but I'm proud to say that I'm fairly fluent now. And I've gotten more in touch with my cultural roots.</p>
 					</div>
 				</div>
 
 				<hr style="width:100%; border-color:#6C7A89; opacity: .6; padding-top: 0px; margin: 0; ">
 				<h3 class="subtitle">Employment</h3>
 				<br>
+				<div class="row">
+					<div class="col-md-4">
+						<p class="exp-title"><b>TigerLabs Ventures</b></p>
+						<p class="timespent">2013-Present</p>
+					</div>
+					<div class="col-md-8">
+						<p class="exp-info"><b>Business Analyst</b></p>
+						<p class="exp-desc">TigerLabs Ventures is a seed stage VC firm. Last year I wrote a small python script to source new investment opportunities on AngelList and CrunchBase. Now, I work with the partners to conduct due diligence on potential deals and help write investment memos. I participated in conducting due diligence on Cinema6, a company that TigerLabs recently made an investment in.</p>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-md-4">
 						<p class="exp-title"><b>Pace Center for Civic Engagement</b></p>
@@ -169,62 +180,53 @@
 						<p class="exp-desc">I develop leadership modules to provide training for all civic engagement groups on campus. That's about 700+ students. I'm a bit nervous to be honest- that number wasn't in the job description- but being paid to do what I love is never bad.</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<p class="exp-title"><b>TigerLabs Ventures</b></p>
-						<p class="timespent">2013-Present</p>
-					</div>
-					<div class="col-md-8">
-						<p class="exp-info"><b>Business Analyst</b></p>
-						<p class="exp-desc">TigerLabs Ventures is a seed stage VC firm. Last year I wrote a small python script to source new investment opportunities on AngelList and CrunchBase. Now, I work with a team to source investment opportunities.</p>
-					</div>
-				</div>
 			</div>
 		</div>
 		<div class="background-white fotos">
-			<div id="fun" class="container">
-			<h2>Fun and Fotos</h2>
-				<hr style="width:100%; border-color:#6C7A89; opacity: .6; margin-top: 20px;">
-				<div class="row">
+			<div id="fun" class="container box">
+			<h2>Projects</h2>
+				<hr style="width:100%; border-color:#6C7A89; opacity: 1; margin-top: 20px;">
+				<div class="row trigger">
 					<ul class="photo-grid">
 						<div class="col-md-6">
 							<li>
-								<a href="http://princetonsei.org" target="_blank">
+								<a href="http://princetonsi.com" target="_blank">
 											<figure>
-												<img src="https://s3.amazonaws.com/nathanlamimages/images/psi.png" class="project-image">
-												<figcaption><p><i>PSI Site</i><br> Redesigning the website and transferring back-end to Django</p></figcaption>
+												<img src="https://s3.amazonaws.com/nathanlamimages/images/princetonsi.png" class="project-image">
+												<figcaption><p><i>PSI Site</i><br>To help Princeton Social Innovation rebrand, I rebuilt the site.</p></figcaption>
 											</figure>
 								</a>
 							</li>
 						</div>
 						<div class="col-md-6">
 							<li>
-								<a href="http://princetonsei.org/ted/TEDx.html" target="_blank">
+								<a href="http://princetonsi.com/tedx" target="_blank">
 											<figure>
 												<img src="https://s3.amazonaws.com/nathanlamimages/images/TEDxPrincetonU.png" class="project-image">
-												<figcaption><p><i>TEDxPrincetonU</i><br>I help coordinate TEDx events on campus</p></figcaption>
+												<figcaption><p><i>TEDxPrincetonU</i><br>I put together a quick information page for our upcoming TEDxEmpower event at Princeton.</p></figcaption>
 											</figure>
 								</a>
 							</li>
 						</div>
 						<div class="col-md-6">
 							<li>
-								<a href="https://itunes.apple.com/us/app/princetons-world-of-e/id723182829?mt=8" target="_blank">
+								<a href="http://mattsyphotography.herokuapp.com" target="_blank">
 											<figure>
-												<img src="https://s3.amazonaws.com/nathanlamimages/images/worldofe.png" class="project-image">
-												<figcaption><p><i>World of E</i><br>Working with a team to develop iOS, Android, and WebApp for Princeton Entrepreneurs.</p></figcaption>
+												<img src="https://s3.amazonaws.com/nathanlamimages/images/mattsy.jpg" class="project-image">
+												<figcaption><p><i>Matt Sy</i><br>Still under construction, but I'm building a portfolio for a photographer working with Wong Fu Productions.</p></figcaption>
 											</figure>
 								</a>
 							</li>
 						</div>
 						<div class="col-md-6">
 							<li>
-								<a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/chinacover.jpg" alt="Sorry, the picture ran away :(." title="Prior to the conference, I had time to explore and climb things around China.">
+								<a id="china_image" class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/chinacover.jpg" alt="Sorry, the picture ran away :(." title="Prior to the conference, I had time to explore and climb things around China.">
 											<figure>
 												<img src="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/chinacover.jpg" class="project-image">
 												<figcaption><p><i>CASC China</i><br>Leadership Development is a huge part of my life, and it's brought me to China. Here's a peep into my adventures.</p></figcaption>
 											</figure>
 								</a>
+								<div class="ajax"></div>
 								<a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/conferencestart.jpg" alt="Sorry, the picture ran away :(." title="Pre-camp was busy. We were preparing roughly four days worth of curriculum."></a>
 								<a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/sitephoto.JPG" alt="Sorry, the picture ran away :(." title="Much more peaceful than my last stay in Beijing, we lived in the sixth ring. The site was beautiful."></a>
 								<a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/staffmailbox.jpg" alt="Sorry, the picture ran away :(." title="Staffing these conferences are hard work. We were busy from 7AM to midnight everyday. To keep spirits, up we have mailboxes to leave each other bits of encouragement and support."></a>
@@ -240,7 +242,7 @@
 			</div>
 		</div>
 		<div class="background-darkblue">
-			<div id="contact" class="container">
+			<div id="contact" class="container box">
 				<h2 style="color: white;">Contact</h2>
 				<hr style="width:100%; border-color:#6C7A89; opacity: .6; margin-top: 20px;">
 			</div>
@@ -262,6 +264,9 @@
 		<script type="text/javascript" src="css/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 		<script>
 			$(document).ready(function() {
+				$("#china_image").click(function(){
+					$(".ajax").html('<a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/conferencestart.jpg" alt="Sorry, the picture ran away :(." title="Pre-camp was busy. We were preparing roughly four days worth of curriculum."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/sitephoto.JPG" alt="Sorry, the picture ran away :(." title="Much more peaceful than my last stay in Beijing, we lived in the sixth ring. The site was beautiful."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/staffmailbox.jpg" alt="Sorry, the picture ran away :(." title="Staffing these conferences are hard work. We were busy from 7AM to midnight everyday. To keep spirits, up we have mailboxes to leave each other bits of encouragement and support."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/food.jpg" alt="Sorry, the picture ran away :(." title="They mistakenly ordered food for fifteen while there were only eight people."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/goalreach.jpg" alt="Sorry, the picture ran away :(." title="The students were each reaching for goals they had written on those pieces of paper. With the help of their friends, of course."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/activelistening.jpg" alt="Sorry, the picture ran away :(." title="One of the camera men drew this on my blackboard after our session on active listening."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/jumping.JPG" alt="Sorry, the picture ran away :(." title="This was the best jumping photo we got."></a><a class="fancybox" rel="gallery1" href="https://s3.amazonaws.com/nathanlamimages/images/chinahighlights/goodbye.jpg" alt="Sorry, the picture ran away :(." title="As we begin our depature back to the states! The conference was an overall success, and I plan on returning in the near future."></a>');
+				});
 				$(".fancybox").fancybox({
 					helpers:{
 						title:{
