--- a/home.html
+++ b/home.html
@@ -4,13 +4,14 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<meta name="description" content="Hi. I like narwhals.">
+		<meta name="description" content="Interactive Resume">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="Font-Awesome-master/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="Font-Awesome-master/css/font-awesome.min.css">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
- 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+		<link rel="shortcut icon" href="/favicon1.ico" type="image/x-icon">
+ 		<link rel="icon" href="/favicon1.ico" type="image/x-icon">
 
 		<link rel="stylesheet" href="css/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 		<link rel="stylesheet" href="css/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
@@ -113,7 +114,7 @@
 					</div>
 					<div class="col-md-8">
 						<p class="exp-info"><b>Co-President</b></p>
-						<p class="exp-desc">We bring opportunities to campus that educate and prepare students for social impact careers. Two of the main programs we hold include TEDxPrincetonU and PSICON15, a two-day social impact conference and social venture competition in which we award $30,000 in seed funding. Recently, my main responsibilities have involved managing the web development team. We use Trello to set deadlines and delegate tasks, and we have weekly scrums to keep our development process on track.</p>
+						<p class="exp-desc">We bring opportunities to campus that educate and prepare students for social impact careers. Two of the main programs we hold include TEDxPrincetonU and PSICON15, a two-day social impact conference and social venture competition in which we award $30,000 in seed funding. My main responsibilities have involved managing the web development team. We use Trello to set deadlines and delegate tasks, and we have weekly scrums to keep our development process on track.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -132,7 +133,7 @@
 						<p class="timespent">2010-Present</p>
 					</div>
 					<div class="col-md-8">
-						<p class="exp-info"><b>Gamma (Leadership Coach)</b></p>
+						<p class="exp-info"><b>Leadership Consultant</b></p>
 						<p class="exp-desc">These past few years, most of my time was spent counseling peer-to-peer youth leadership programs with CASC. We hold camps and conferences for K-12 students. I've traveled around California and China working with this organization, and I plan to stay involved for years to come. Gamma basically means that I'm a counselor's counselor: I train high school counselors that run over fifty programs each year.</p>
 					</div>
 				</div>
@@ -191,30 +192,50 @@
 						<div class="col-md-6">
 							<li>
 								<a href="http://princetonsi.com" target="_blank">
-											<figure>
-												<img src="https://s3.amazonaws.com/nathanlamimages/images/princetonsi.png" class="project-image">
-												<figcaption><p><i>PSI Site</i><br>To help Princeton Social Innovation rebrand, I rebuilt the site.</p></figcaption>
-											</figure>
+									<figure>
+										<img src="https://s3.amazonaws.com/nathanlamimages/images/princetonsi.png" class="project-image">
+										<figcaption><p><i>PSI</i><br>Rebuilt the website for Princeton Social Innovation to help the organization rebrand.</p></figcaption>
+									</figure>
 								</a>
 							</li>
 						</div>
 						<div class="col-md-6">
 							<li>
 								<a href="http://princetonsi.com/tedx" target="_blank">
-											<figure>
-												<img src="https://s3.amazonaws.com/nathanlamimages/images/TEDxPrincetonU.png" class="project-image">
-												<figcaption><p><i>TEDxPrincetonU</i><br>I put together a quick information page for our upcoming TEDxEmpower event at Princeton.</p></figcaption>
-											</figure>
+									<figure>
+										<img src="https://s3.amazonaws.com/nathanlamimages/images/TEDxPrincetonU.png" class="project-image">
+										<figcaption><p><i>TEDxPrincetonU</i><br>I put together a quick information page for our upcoming TEDxEmpower event at Princeton.</p></figcaption>
+									</figure>
 								</a>
 							</li>
 						</div>
 						<div class="col-md-6">
 							<li>
 								<a href="http://mattsyphotography.herokuapp.com" target="_blank">
-											<figure>
-												<img src="https://s3.amazonaws.com/nathanlamimages/images/mattsy.jpg" class="project-image">
-												<figcaption><p><i>Matt Sy</i><br>Still under construction, but I'm building a portfolio for a photographer working with Wong Fu Productions.</p></figcaption>
-											</figure>
+									<figure>
+										<img src="https://s3.amazonaws.com/nathanlamimages/images/mattsy.jpg" class="project-image">
+										<figcaption><p><i>Matt Sy</i><br>Still under construction, but I'm building a portfolio for a photographer working with Wong Fu Productions.</p></figcaption>
+									</figure>
+								</a>
+							</li>
+						</div>
+						<div class="col-md-6">
+							<li>
+								<a href="https://github.com/nathanshiaulam/kindergartendrawingsimulator" target="_blank">
+									<figure>
+										<img src="https://s3.amazonaws.com/nathanlamimages/images/colormyscreen.png" class="project-image">
+										<figcaption><p><i>ColorMyScreen</i><br>Created an app for my computer vision class with OpenCV to let users draw on their screens via webcam.</p></figcaption>
+									</figure>
+								</a>
+							</li>
+						</div>
+						<div class="col-md-6">
+							<li>
+								<a href="http://psicon15.com" target="_blank">
+									<figure>
+										<img src="https://s3.amazonaws.com/nathanlamimages/images/psicon15.png" class="project-image">
+										<figcaption><p><i>PSICON15</i><br>Led a team of developers to build a website for Princeton's first social innovation conference.</p></figcaption>
+									</figure>
 								</a>
 							</li>
 						</div>
